add @property method to user mode

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 .git/*
 env/
 venv/
+sent_emails/
 
 __pycache__/
 *.py[cod]
@@ -10,10 +11,11 @@ __pycache__/
 .AppleDouble
 .LSOverride
 .vscode
-
+.env
 *.sublime-project
 *.sublime-workspace
 
 media/
 
 db.sqlite3
+*.env
